<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarFadeDuration="0">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PlantSaveActivity">

        <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
            android:elevation="@dimen/toolbar_elevation"
            >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Add Plant"
            android:theme="@style/ToolbarStyle"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"

             />
    </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extendedFabSavePlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_margin="16dp"
            android:contentDescription="@string/save_plant_button"
            android:gravity="center_horizontal"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tableLayout"/>

        <ImageView
            android:id="@+id/imageViewPlant"
            android:layout_width="@dimen/adding_image_width"
            android:layout_height="@dimen/adding_image_height"
            android:layout_marginTop="@dimen/margin_top"
            android:contentDescription="@string/seedling_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainToolBar"
            app:srcCompat="@drawable/new_seedling" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="@dimen/table_width"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPlant">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPlantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editTextPlantName"
                    android:layout_width="@dimen/table_row_input_width"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/plant_name"
                    android:inputType="textPersonName"
                    android:labelFor="@id/rangeSliderBloomTime" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textViewType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Type"
                    android:entries="@array/plantTypes" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textViewPlantLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light" />

                <Spinner
                    android:id="@+id/spinnerPlantLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/lightTypes" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height" />

                <EditText
                    android:id="@+id/editTextPlantHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/example_height"
                    android:inputType="text"
                    android:textSize="@dimen/edit_text_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <!-- Continuous slider -->
                <TextView
                    android:id="@+id/textViewBloomTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bloom_time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/rangeSliderBloomTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="1.0"
                        android:valueFrom="1.0"
                        android:valueTo="12.0"
                        app:values="@array/initial_slider_values" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textViewFirstBloomMonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/april"
                            android:textAlignment="viewStart" />

                        <TextView
                            android:id="@+id/textViewLastBloomTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/to"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textViewLastBloomMonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:labelFor="@id/rangeSliderBloomTime"
                            android:text="@string/october"
                            android:textAlignment="viewEnd" />
                    </LinearLayout>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewFertilizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertilizer" />

                <EditText
                    android:id="@+id/editTextFertilizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/fertilizer_example"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/edit_text_size" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPruning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pruning" />

                <EditText
                    android:id="@+id/editTextPruning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/pruning_example"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/edit_text_size" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPlantNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes" />

                <EditText
                    android:id="@+id/editTextPlantNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/notes_example"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/edit_text_size" />
            </TableRow>
        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>




