<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarFadeDuration="0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".GardenSaveActivity">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extendedFABallGardens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all_gardens"
            app:icon="@drawable/back_suggest_icon"
            android:contentDescription="@string/view_all_gardens"
            app:layout_constraintBottom_toTopOf="@+id/imageViewSeedling2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extendedFabSaveGarden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:contentDescription="@string/save_plant_button"
            android:gravity="center_horizontal"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

        <ImageView
            android:id="@+id/imageViewSeedling2"
            android:layout_width="@dimen/adding_image_width"
            android:layout_height="@dimen/adding_image_height"
            android:layout_marginTop="@dimen/margin_top_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/extendedFABallGardens"
            app:srcCompat="@drawable/little_seedling" />

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="@dimen/table_width"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSeedling2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewGardenName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/garden_name" />

                <EditText
                    android:id="@+id/editTextTextGardenName"
                    android:layout_width="@dimen/table_row_input_width"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/garden_name_hint"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewGardenSize2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size" />

                <EditText
                    android:id="@+id/editTextGardenSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/garden_size_hint"
                    android:inputType="text"
                    android:textSize="@dimen/edit_text_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewGardenLighting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lighting" />

                <Spinner
                    android:id="@+id/spinnerGardenLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/lightTypes"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGardenNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes" />

                <EditText
                    android:id="@+id/editTextGardenNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="@dimen/edit_text_size"
                    android:gravity="start|top"
                    android:hint="@string/garden_notes_example"
                    android:inputType="textMultiLine" />
            </TableRow>
        </TableLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>