<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlantsActivity">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton

        android:id="@+id/extendedFabBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:contentDescription="@string/view_all_gardens"
        android:text="@string/view_all_gardens"
        app:icon="@drawable/back_suggest_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPlantsGardenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/garden_name"
        android:layout_marginTop="@dimen/margin_top"
        android:textAllCaps="false"
        android:textSize="@dimen/heading_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewGardenNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/extendedFabBackToMain"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewGardenNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPlants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlantsGardenName"
        tools:text="@string/garden_notes_example" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPlants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top"
        android:paddingBottom="150dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGardenNotes" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddPlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add_icon" />



</androidx.constraintlayout.widget.ConstraintLayout>