<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndividualPlantActivity">

<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
<!--        android:id="@+id/extendedFabBackToGarden"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/fab_margin"-->
<!--        android:layout_marginStart="@dimen/fab_margin"-->
<!--        android:contentDescription="@string/view_all_gardens"-->
<!--        android:text="@string/back_to_garden"-->
<!--        app:icon="@drawable/back_suggest_icon"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/plant_name"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
            android:elevation="@dimen/toolbar_elevation"
            app:titleTextColor="#4F514F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        app:cardBackgroundColor="@color/lightGray"
        app:cardCornerRadius="5dp"
        app:contentPadding="@dimen/margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolBar">

        <ImageView
            android:layout_width="@dimen/adding_image_width"
            android:layout_height="@dimen/adding_image_height"
            app:srcCompat="@drawable/little_seedling" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/textViewPlantType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            tools:text="type" />

        <TextView
            android:id="@+id/textViewPlantLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            tools:text="Light" />

        <TextView
            android:id="@+id/textViewPlantHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            tools:text="Height" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textViewPlantBloomStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center"
                tools:text="Bloom1" />

            <TextView
                android:id="@+id/textViewPlantTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/to"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewPlantBloomEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textAlignment="center"
                tools:text="Bloom2" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textViewFertilizerLabel"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/fertilizer"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textViewPlantFertilizer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:text="@string/unavailable" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textViewPruningLabel"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/pruning"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textViewPlantPruning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:text="@string/unavailable" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textViewNotesLabel"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/notes"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textViewPlantNotes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:text="@string/unavailable" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>